# tecrax

./: .gitignore  CHANGELOG.md  LICENSE  PUBLIC_STATUS.md  README.md  VALIDATION.md  pyproject.toml
.github/workflows/: ci.yml
deploy/wazuh/: hillstone-stoneos-decoders.xml  hillstone-stoneos-rules.xml
docs/: dns-authority-checkpoint-runbook.md  domain-contracts.md  future-product-activation.md  glpi-vm-deployment-runbook.md  grafana-ct-deployment-runbook.md  http-action-identity-checkpoint.md  network-device-readonly-runbook.md  operation-catalog.md  proxmox-backup-server-deployment-runbook.md  proxmox-backup-server-readiness-runbook.md  proxmox-external-cifs-restore-proof-runbook.md  r2-readonly-status.md  service-api-boundaries.md  service-boundary-decision-t5.md  ubuntu-host-readonly-runbook.md  zabbix-agent-baseline-runbook.md  zabbix-network-icmp-adoption-runbook.md  zabbix-network-snmp-adoption-runbook.md  zabbix-readonly-summaries-runbook.md  zabbix-vm-docker-deployment-runbook.md
docs/runbooks/: alert-presentation-language-baseline-runbook.md  frigate-host-monitoring-runbook.md  glpi-alert-ticket-routing-runbook.md  glpi-minimal-operational-baseline-runbook.md  grafana-main-infrastructure-dashboard-runbook.md  infrastructure-control-plane-recovery-runbook.md  linux-update-visibility-canary-runbook.md  network-device-readonly-runbook.md  network-security-device-management-tls-runbook.md  network-security-device-syslog-to-wazuh-runbook.md  pki-center-bootstrap-runbook.md  pki-certificate-lifecycle-planning-runbook.md  proxmox-backup-server-verify-gc-runbook.md  serverroom-environment-sensor-runbook.md  synology-nas-ad-auth-prechange-runbook.md  synology-nas-domain-home-gpo-runbook.md  vaultwarden-app-backup-break-glass-runbook.md  windows-ad-pilot-endpoint-runbook.md  windows-librarian-application-baseline-runbook.md  windows-staff-home-folders-gpp-runbook.md  zabbix-network-snmp-adoption-runbook.md
examples/environments/: network-device.readonly.example.yaml  ubuntu-host.readonly.example.yaml
scripts/: collect-zabbix-problems-for-glpi.py  prepare-windows-ad-pilot-endpoint.sh  route-glpi-alerts.py  validate_active_profile.py  validate_public_truth.py  validate_secret_topology.py
src/tecrax/: __init__.py  alert_routing.py  cli.py  contracts.py  escalation.py  internal_actions.py  local_fixture.py  reactions.py  zabbix_glpi_events.py
src/tecrax/connectors/: __init__.py  proxmox.py  proxmox_runtime.py
src/tecrax/fixture/: mock_runtime.py
src/tecrax/normalizers/: diagnostics.py  host.py  network.py  network_parsers.py  services.py
src/tecrax/profile/: finding_taxonomy.yaml  operator_metadata.yaml  profile.yaml
src/tecrax/profile/connectors/: adguard_health.yaml  chrony_ntp_server.yaml  monitoring_host.yaml  network_device_cli.yaml  pbs.yaml  portainer_api.yaml  proxmox.yaml  zabbix_api.yaml  zabbix_api_authenticated.yaml
src/tecrax/profile/intents/: check_backup_status.yaml  check_ntp_health.yaml  check_zabbix_container_health.yaml  diagnose_monitoring_host.yaml  restart_zabbix_agent.yaml
src/tecrax/profile/reactions/: reaction_pack.yaml
src/tecrax/profile/validation_rules/: check_backup_status.yaml  check_ntp_health.yaml  check_zabbix_container_health.yaml  restart_zabbix_agent.yaml
src/tecrax/profile/workflows/: check_backup_status.yaml  check_ntp_health.yaml  check_zabbix_container_health.yaml  collect_basic_host_inventory.yaml  collect_host_security_posture_readonly.yaml  diagnose_monitoring_host.yaml  restart_zabbix_agent.yaml
src/tecrax/schemas/: basic_host_inventory.v1.schema.json  host_security_posture.v1.schema.json  monitoring_host_diagnosis.v1.schema.json  network_device_inventory.v1.schema.json  network_management_posture.v1.schema.json
tests/: test_active_profile_gate.py  test_alert_routing.py  test_basic_host_inventory.py  test_chrony_ntp_mutation.py  test_escalation_proposals.py  test_facts_contracts.py  test_host_foundations.py  test_local_fixture.py  test_network_device_inventory.py  test_operator_catalog.py  test_operator_metadata.py  test_proxmox_connector_backend.py  test_proxmox_connector_templates.py  test_public_operator_helpers.py  test_reactions.py  test_rexecop_profile.py  test_wazuh_hillstone_assets.py  test_zabbix_glpi_events.py
tests/fixtures/network_devices/hpe_v1910_comware5/: ssh_status.txt  system_info.txt
tests/fixtures/network_devices/tplink_sg2452_v1/: ssh_status.txt  system_info.txt
(+2 files in other folders)
