[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tecrax"
version = "0.2.1a0"
description = "Dry-run local-fixture infrastructure-operations profile over GovEngine and SCLite."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Krzysztof Probola" }]
keywords = ["governance", "infrastructure", "operations", "sclite", "govengine"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "govengine>=0.10.2a0,<0.11",
  "sclite-core>=0.7.0a0,<0.8",
]

[project.urls]
Homepage = "https://github.com/rozmiarD/tecrax"
Repository = "https://github.com/rozmiarD/tecrax"

[project.scripts]
tecrax = "tecrax.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tecrax"]
