[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tecrax"
version = "0.3.0a0"
description = "Governed infrastructure-operations profile and RExecOp domain package over GovEngine and SCLite."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Krzysztof Probola" }]
keywords = ["governance", "infrastructure", "operations", "sclite", "govengine"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "govengine>=0.12.2a0,<0.15",
  "sclite-core>=1.0.1,<1.1",
]

[project.entry-points."rexecop.profiles"]
tecrax = "tecrax:profile_root"

[project.urls]
Homepage = "https://github.com/rozmiarD/tecrax"
Repository = "https://github.com/rozmiarD/tecrax"

[project.scripts]
tecrax = "tecrax.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tecrax"]
