[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tecrax"
version = "0.4.0rc1"
description = "Governed infrastructure-operations profile and RExecOp domain package over GovEngine and SCLite."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Krzysztof Probola" }]
keywords = ["governance", "infrastructure", "operations", "sclite", "govengine"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "govengine==0.17.0rc1",
  "sclite-core==2.0.0rc1",
  "rexecop==0.3.0rc1",
]

[project.entry-points."rexecop.profiles"]
tecrax = "tecrax:profile_root"

[project.entry-points."rexecop.internal_actions"]
tecrax = "tecrax.internal_actions:register_handlers"

[project.entry-points."rexecop.connector_backends"]
tecrax_chrony_ntp = "tecrax.connectors.chrony:build_chrony_ntp_backend"

[project.urls]
Homepage = "https://github.com/rozmiarD/tecrax"
Repository = "https://github.com/rozmiarD/tecrax"

[project.scripts]
tecrax = "tecrax.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.14,<1",
  "mypy>=1.18,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tecrax"]

[tool.hatch.build.targets.wheel.force-include]
"examples" = "examples"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["F"]

[tool.mypy]
python_version = "3.11"
files = ["src/tecrax"]
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["."]
